MBP-424 - Only load what is needed when doing a search - Make it so we can run unit tests from ant