@@ -20,7 +20,11 @@
     <property name="lib" location="lib"/>
     <property name="resources" location="resources"/>
     <property name="src" location="src"/>
-
+    <property name="test" location="test"/>
+    <property name="test.classes" location="testclasses"/>
+    <property name="test.data" location="testdata"/>
+    <property name="report" location="report"/>
+    <property name="GeneiousFiles" location="GeneiousFiles"/>
 
     <path id="classpath">
         <fileset dir="${lib}"/>
@@ -36,7 +40,7 @@
 
     </target>
 
-    <target name="build" depends="compile">
+    <target name="build" depends="clean,compile">
         <jar jarfile="${build}/${plugin-name}.jar">
             <fileset dir="${classes}"/>
         </jar>
@@ -63,7 +67,7 @@
 
     </target>
 
-    <target name="compile" depends="prepare,resolve">
+    <target name="compile" depends="prepare,retrieve-build-dependencies">
         <javac target="1.6" source="1.6" destdir="${classes}" debug="true">
             <classpath refid="classpath"/>
             <src path="${src}"/>
@@ -73,11 +77,62 @@
     <target name="prepare">
         <mkdir dir="${build}"/>
         <mkdir dir="${classes}"/>
+        <mkdir dir="${test.classes}"/>
+        <mkdir dir="${report}"/>
     </target>
 
     <target name="clean">
+        <delete>
+            <fileset dir="${lib}"/>
+        </delete>
         <delete dir="${build}"/>
         <delete dir="${classes}"/>
+        <delete dir="${test.classes}"/>
+        <delete dir="${report}"/>
+        <delete dir="${GeneiousFiles}"/>
+        <delete file="GeneiousFiles.zip"/>
+    </target>
+
+    <target name="compile-tests" depends="compile">
+        <javac target="1.6" source="1.6" destdir="${test.classes}" debug="true">
+            <classpath>
+                <path refid="classpath"/>
+                <pathelement location="${classes}"/>
+            </classpath>
+            <src path="${test}"/>
+        </javac>
+    </target>
+
+    <target name="test" depends="compile-tests, retrieve-test-runtime-dependencies">
+        <junit dir="GeneiousFiles" fork="true" maxmemory="1024M" printsummary="on" timeout="180000">
+            <batchtest todir="${report}">
+            <fileset dir="${test.classes}">
+               <include name="**/*Test.class"/>
+            </fileset>
+            </batchtest>
+            <classpath>
+                <path refid="classpath"/>
+                <file file="${GeneiousFiles}/iSeek.jar"/>
+                <fileset dir="${GeneiousFiles}/lib"/>
+                <pathelement location="${classes}"/>
+                <pathelement location="${resources}"/>
+                <pathelement location="${test.classes}"/>
+                <pathelement location="${test.data}"/>
+                <pathelement location="${GeneiousFiles}/resources"/>
+                <pathelement location="${GeneiousFiles}/bundledPlugins"/>
+            </classpath>
+            <env key="DISPLAY" value=":0.0"/>
+            <env key="DYLD_LIBRARY_PATH" value="/Library/Application Support/Geneious/Frameworks"/>
+            <formatter type="xml"/>
+            <jvmarg value="-Xms256M"/>
+            <jvmarg value="-ea"/>
+            <jvmarg value="-XX:MaxNewSize=40M"/>
+            <jvmarg value="-XX:MaxPermSize=256M"/>
+            <jvmarg value="-XX:ReservedCodeCacheSize=128m"/>
+            <jvmarg value="-Xss512K"/>
+            <sysproperty key="report.dir" value="${report}"/>
+            <sysproperty key="user.dir" value="${build}"/>
+        </junit>
     </target>
 
 
@@ -92,9 +147,16 @@
     <!-- load ivy settings -->
     <ivy:settings file="ivysettings.xml" id="biocode.ivy.config" />
 
-    <target name="resolve" description="Retrieve dependencies with ivy">
-       <ivy:retrieve settingsref="biocode.ivy.config"/>
-       <ivy:cachepath pathid="lib" settingsref="biocode.ivy.config"/>
+    <target name="retrieve-build-dependencies" description="Retrieve dependencies with ivy">
+       <ivy:retrieve conf="build" settingsref="biocode.ivy.config"/>
+    </target>
+
+    <condition property="GeneiousFiles.exists">
+        <available file="${GeneiousFiles}" type="dir"/>
+    </condition>
+    <target name="retrieve-test-runtime-dependencies" description="Retrieve the Geneious runtime for running the tests" unless="GeneiousFiles.exists">
+       <ivy:retrieve conf="test" type="resource" settingsref="biocode.ivy.config" pattern="${basedir}/[artifact].[ext]"/>
+       <unzip src="GeneiousFiles.zip" dest="."/>
     </target>
 
     <target name="clean-ivy-cache">
